# plantuml-rs

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  deploy-pages.yml  release-wasm.yml
crates/plantuml-ast/: Cargo.toml
crates/plantuml-ast/src/: activity.rs  class.rs  common.rs  component.rs  diagram.rs  er.rs  gantt.rs  json.rs  lib.rs  mindmap.rs  network.rs  object.rs  salt.rs  sequence.rs  state.rs  timing.rs  usecase.rs  wbs.rs  yaml.rs
crates/plantuml-core/: Cargo.toml
crates/plantuml-core/examples/: activity_demo.rs  class_demo.rs  component_demo.rs  deployment_demo.rs  er_demo.rs  gantt_demo.rs  json_demo.rs  mindmap_demo.rs  network_demo.rs  object_demo.rs  salt_demo.rs  sequence_demo.rs  state_demo.rs  test_db.rs  timing_demo.rs  usecase_demo.rs  wbs_demo.rs  yaml_demo.rs
crates/plantuml-core/src/: error.rs  lib.rs  options.rs  pipeline.rs
crates/plantuml-core/tests/: class_tests.rs  sequence_tests.rs  state_tests.rs
crates/plantuml-core/tests/snapshots/: class_tests__complex_hierarchy.snap  class_tests__composition_aggregation.snap  class_tests__inheritance.snap  class_tests__interface.snap  class_tests__simple_class.snap  sequence_tests__alt_fragment.snap  sequence_tests__participant_types.snap  sequence_tests__self_message.snap  sequence_tests__simple_sequence.snap  state_tests__simple_state.snap  state_tests__state_with_choice.snap  state_tests__state_with_definitions.snap
crates/plantuml-layout/: Cargo.toml
crates/plantuml-layout/src/: config.rs  lib.rs  traits.rs
crates/plantuml-layout/src/activity/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/class/: config.rs  engine.rs  graph.rs  mod.rs  sugiyama.rs
crates/plantuml-layout/src/component/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/er/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/gantt/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/json/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/mindmap/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/network/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/object/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/salt/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/sequence/: config.rs  engine.rs  metrics.rs  mod.rs
crates/plantuml-layout/src/state/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/timing/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/usecase/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/wbs/: config.rs  engine.rs  mod.rs
crates/plantuml-layout/src/yaml/: config.rs  engine.rs  mod.rs
crates/plantuml-model/: Cargo.toml
crates/plantuml-model/src/: lib.rs
crates/plantuml-parser/: Cargo.toml
crates/plantuml-parser/src/: error.rs  lexer.rs  lib.rs
crates/plantuml-parser/src/grammars/: activity.pest  class.pest  component.pest  er.pest  gantt.pest  json.pest  mindmap.pest  network.pest  object.pest  salt.pest  sequence.pest  state.pest  timing.pest  usecase.pest  wbs.pest  yaml.pest
crates/plantuml-parser/src/parsers/: activity.rs  class.rs  component.rs  er.rs  gantt.rs  json.rs  mindmap.rs  mod.rs  network.rs  object.rs  salt.rs  sequence.rs  state.rs  timing.rs  usecase.rs  wbs.rs  yaml.rs
crates/plantuml-preprocessor/: Cargo.toml
crates/plantuml-preprocessor/src/: builtins.rs  directives.rs  error.rs  fs_resolver.rs  functions.rs  lib.rs  variables.rs
crates/plantuml-renderer/: Cargo.toml
crates/plantuml-renderer/src/: lib.rs  png_renderer.rs  shapes.rs  svg_renderer.rs
crates/plantuml-stdlib/: Cargo.toml
crates/plantuml-stdlib/src/: lib.rs
crates/plantuml-themes/: Cargo.toml
crates/plantuml-themes/src/: lib.rs
crates/plantuml-wasm/: Cargo.toml
crates/plantuml-wasm/src/: lib.rs
docker/: nginx.conf
docs/: ARCHITECTURE.md  PLAN.md  PLANTUML_LANGUAGE_REFERENCE.md  SYNTAX.md
playground/: index.html  test.html
tests/fixtures/activity/: basic.puml
tests/fixtures/class/: basic.puml  relationships.puml
tests/fixtures/component/: basic.puml
tests/fixtures/sequence/: basic.puml  fragments.puml  participants.puml
tests/fixtures/state/: basic.puml
tests/visual/: COMPARISON_REPORT.md
