[package]
name = "plantuml-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Лексер и парсер PlantUML синтаксиса"
keywords = ["plantuml", "parser", "lexer"]
categories = ["parsing"]

[dependencies]
plantuml-ast = { workspace = true }
logos = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
