[package]
name = "plantuml-preprocessor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Препроцессор PlantUML (!include, !define, !if, etc.)"
keywords = ["plantuml", "preprocessor"]
categories = ["text-processing"]

[dependencies]
thiserror = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
plantuml-themes = { path = "../plantuml-themes" }

[dev-dependencies]
tempfile = "3.10"
