[package]
name = "plantuml-themes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Темы и skinparam для PlantUML"
keywords = ["plantuml", "theme", "style"]

[dependencies]
serde = { workspace = true }
