[package]
name = "plantuml-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM биндинги для plantuml-rs"
keywords = ["plantuml", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plantuml-core = { workspace = true }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
